Adjust iOS PWA viewport behavior

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
+  />
   <title>Tuppería</title>
   <meta name="description" content="Calendario de comidas sincronizado en tiempo real con Firebase." />
   <meta name="theme-color" content="#d96b4b" />
