--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
               <span>Nuevo elemento</span>
               <input id="shoppingInput" type="text" placeholder="Ej: Tomates, papel, café..." />
             </label>
+            <label class="field shopping-quantity-field" for="shoppingQuantity">
+              <span>Cantidad</span>
+              <select id="shoppingQuantity" aria-label="Cantidad del ingrediente">
+                <option value="1" selected>x1</option>
+                <option value="2">x2</option>
+                <option value="3">x3</option>
+                <option value="4">x4</option>
+                <option value="5">x5</option>
+                <option value="6">x6</option>
+                <option value="7">x7</option>
+                <option value="8">x8</option>
+                <option value="9">x9</option>
+                <option value="10">x10</option>
+              </select>
+            </label>
             <button class="btn secondary" type="submit">Añadir</button>
           </form>
           <details class="shopping-suggestions" id="shoppingSuggestions">
