Ajusta selector de cantidad junto al ingrediente

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             </div>
           </header>
           <form class="shopping-form" id="shoppingForm">
-            <label class="field">
-              <span>Nuevo elemento</span>
+            <label class="field shopping-main-field">
+              <span>Ingrediente</span>
               <input id="shoppingInput" type="text" placeholder="Ej: Tomates, papel, café..." />
             </label>
             <label class="field shopping-quantity-field" for="shoppingQuantity">
-              <span>Cantidad</span>
+              <span class="visually-hidden">Cantidad</span>
               <select id="shoppingQuantity" aria-label="Cantidad de unidades">
                 <option value="1" selected>x1</option>
                 <option value="2">x2</option>
