Permitir seleccionar categoría manual en recetas

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
               <input id="recipesInput" type="text" placeholder="Ej: Bowl de quinoa, tacos..." />
             </label>
             <label class="field">
+              <span>Categoría</span>
+              <select id="recipeCategoryInput"></select>
+            </label>
+            <label class="field">
               <span>Ingrediente</span>
               <input id="recipeIngredientInput" type="text" placeholder="Ej: Tomate, arroz..." />
             </label>
