Implementar comidas por componentes P/H/V en calendario y recetas

--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
               <select id="recipeCategoryInput"></select>
             </label>
             <label class="field">
+              <span>Proteína (P)</span>
+              <input id="recipeProteinInput" type="text" placeholder="Ej: pollo plancha" />
+            </label>
+            <label class="field">
+              <span>Hidratos (H)</span>
+              <input id="recipeCarbsInput" type="text" placeholder="Ej: arroz" />
+            </label>
+            <label class="field">
+              <span>Verduras (V)</span>
+              <input id="recipeVeggiesInput" type="text" placeholder="Ej: calabacín" />
+            </label>
+            <label class="field">
               <span>Ingrediente</span>
               <input id="recipeIngredientInput" type="text" placeholder="Ej: Tomate, arroz..." />
             </label>
