Permitir reordenar ingredientes arrastrando en la lista de compra

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               <ul class="shopping-suggestions__list" id="shoppingSuggestionsList" aria-live="polite"></ul>
             </div>
           </details>
+          <p class="shopping-sort-hint">💡 Arrastra y suelta los ingredientes para ordenarlos como recorres el supermercado.</p>
           <p class="empty-state" id="shoppingEmpty">Tu lista está vacía. Añade lo básico para arrancar.</p>
           <ul class="shopping-list" id="shoppingList" aria-live="polite"></ul>
         </div>
