--- a/index.html
+++ b/index.html
@@ -64,40 +64,42 @@
 
     <main class="page-content">
       <section class="calendar-section view-panel is-active" id="calendarView" aria-labelledby="calendarTitle">
-        <header class="section-header">
-          <div>
-            <h2 id="calendarTitle">Calendario</h2>
-          </div>
-          <div class="section-actions">
-            <span class="summary-pill" id="emptyDaysPill">—</span>
-            <span class="summary-pill is-muted" id="remoteNotice" aria-live="polite" role="status"></span>
-          </div>
-        </header>
-        <div class="calendar-wrapper">
-          <div class="calendar-controls">
-            <div class="range-group">
-              <button class="icon-btn ghost" id="prevWeek" type="button" aria-label="Semana anterior">
-                <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
-              </button>
-              <div class="range">
-                <div class="range-title" id="rangeTitle">—</div>
-                <div class="range-sub" id="rangeSubtitle">—</div>
-              </div>
-              <button class="icon-btn ghost" id="nextWeek" type="button" aria-label="Semana siguiente">
-                <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
-              </button>
+        <div class="calendar-card">
+          <header class="section-header">
+            <div>
+              <h2 id="calendarTitle">Calendario</h2>
             </div>
-            <div class="calendar-actions">
-              <div class="calendar-view-switch" role="group" aria-label="Vista del calendario">
-                <button class="btn ghost small calendar-view-btn" id="viewDay" type="button" data-calendar-view="day">Día</button>
-                <button class="btn ghost small calendar-view-btn" id="viewWeek" type="button" data-calendar-view="week">Semana</button>
-                <button class="btn ghost small calendar-view-btn is-active" id="viewTwoWeeks" type="button" data-calendar-view="twoWeeks">2 semanas</button>
-              </div>
-              <button class="btn minimal small" id="today" type="button">Hoy</button>
+            <div class="section-actions">
+              <span class="summary-pill" id="emptyDaysPill">—</span>
+              <span class="summary-pill is-muted" id="remoteNotice" aria-live="polite" role="status"></span>
             </div>
-          </div>
+          </header>
+          <div class="calendar-wrapper">
+            <div class="calendar-controls">
+              <div class="range-group">
+                <button class="icon-btn ghost" id="prevWeek" type="button" aria-label="Semana anterior">
+                  <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
+                </button>
+                <div class="range">
+                  <div class="range-title" id="rangeTitle">—</div>
+                  <div class="range-sub" id="rangeSubtitle">—</div>
+                </div>
+                <button class="icon-btn ghost" id="nextWeek" type="button" aria-label="Semana siguiente">
+                  <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
+                </button>
+              </div>
+              <div class="calendar-actions">
+                <div class="calendar-view-switch" role="group" aria-label="Vista del calendario">
+                  <button class="btn ghost small calendar-view-btn" id="viewDay" type="button" data-calendar-view="day">Día</button>
+                  <button class="btn ghost small calendar-view-btn" id="viewWeek" type="button" data-calendar-view="week">Semana</button>
+                  <button class="btn ghost small calendar-view-btn is-active" id="viewTwoWeeks" type="button" data-calendar-view="twoWeeks">2 semanas</button>
+                </div>
+                <button class="btn minimal small" id="today" type="button">Hoy</button>
+              </div>
+            </div>
 
-          <div class="calendar-grid" id="calendarGrid" aria-live="polite"></div>
+            <div class="calendar-grid" id="calendarGrid" aria-live="polite"></div>
+          </div>
         </div>
       </section>
 
